from abc import ABC


class Device(ABC):
    def __init__(self):
        self.name = None

