@startuml
'https://plantuml.com/class-diagram
!theme spacelab

class Ventilation {}

class MVHR {}

class TemperatureSensor{}

class BlaubergMVHR{}

class Modbus{}

class Device{}

class ConfigStore{}

class ConfigLoader{}
note bottom
 MVHR Modbus definition for Blauberg
 TemperatureSensor will use it to define each unit
 Also can define which dependency to use
end note

class VentilationConfig
note left
 MVHR IP-Address & Port
end note

VentilationConfig -- ConfigStore
Ventilation --VentilationConfig
BlaubergMVHR --  Modbus: uses to connect to actual unit
MVHR -- BlaubergMVHR
Device <|-- MVHR
Device <|-- TemperatureSensor
Device -- ConfigLoader: uses it to define device
Ventilation "1"--"1..n" Device

@enduml